# spark

./: .swp  package-lock.json
examples/editor/: index.html
examples/portal/: diskPortalFragment.glsl
rust/: Cargo.toml
rust/build-lod/src/: main.rs
rust/py-build-lod/: Cargo.toml  pyproject.toml
rust/py-build-lod/src/: lib.rs
rust/spark-lib/: Cargo.toml
rust/spark-lib/src/: csplat.rs  decoder.rs  gsplat.rs  lib.rs  ply.rs  rad.rs  sogs.rs  tsplat.rs
rust/spark-rs/: Cargo.toml
rust/spark-rs/src/: ext_splats.rs  lib.rs  packed_splats.rs
src/: ExtSplats.ts  SparkPortals.ts  SparkRenderer.ts  SplatMesh.ts  SplatPager.ts  defines.ts  utils.ts  worker.ts
src/shaders/: splatDefines.glsl  splatFragment.glsl  splatVertex.glsl
