[workspace]
members = [
    "build-lod",
    "spark-rs",
    "spark-lib",
    "py-build-lod"
]
resolver = "2"

[workspace.package]
rust-version = "1.82"
edition = "2021"
license = "Proprietary"
authors = ["World Labs Technologies"]
repository = "https://github.com/sparkjs-dev/spark"

[workspace.dependencies]
ahash = { version = "0.8.12", default-features = false, features = ["std", "compile-time-rng"] }
anyhow = "1.0.98"
#flate2 = { version = "1.1.2", default-features = false, features = ["rust_backend"] }
glam = "0.30.8"
half = { version = "2.6.0", features = ["std"] }
itertools = "0.14.0"
js-sys = "0.3.77"
miniz_oxide = "0.8.9"
ordered-float = "5.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"
smallvec = "1.15.1"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
image = { version = "0.25.9", default-features = false, features = ["png", "webp"] }
hnsw = "0.11.0"
rand_pcg = "0.3.1"
space = { version = "0.17.0", default-features = false, features = ["alloc"] }
wgpu = "29"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
