[package]
name = "py-build-lod"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "py_build_lod"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"
spark-lib = { path = "../spark-lib" }
serde_json.workspace = true
anyhow.workspace = true
