[package]
name = "spark-lib"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
glam.workspace = true
half.workspace = true
ordered-float.workspace = true
miniz_oxide.workspace = true
serde.workspace = true
smallvec.workspace = true
itertools.workspace = true
serde_json.workspace = true
zip.workspace = true
image.workspace = true
hnsw.workspace = true
rand_pcg.workspace = true
space.workspace = true
log = "0.4.32"
env_logger = "0.11.10"
serde_path_to_error = "0.1.20"
strum_macros = "0.28.0"
